--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
-<li><a class="waves-effect" href="/">Home</a></li>
-<li><a class="waves-effect" href="/klasemen.html?liga=champions">Liga Champions</a></li>
-<li><a class="waves-effect" href="/klasemen.html?liga=2021">Liga Inggris</a></li>
-<li><a class="waves-effect" href="/klasemen.html?liga=2014">Liga Spanyol</a></li>
-<li><a class="waves-effect" href="/klasemen.html?liga=2019">Liga Italia</a></li>
-<li><a class="waves-effect" href="/saved.html">Favorit Team <span class="big-heart">❤</span></a> </li>
+<li><a class="waves-effect" href="#home">Home</a></li>
+<!-- <li><a class="waves-effect" href="#ligachampions">Liga Champions</a></li> -->
+<li><a class="waves-effect" href="#liga2021">Liga Inggris</a></li>
+<li><a class="waves-effect" href="#liga2014">Liga Spanyol</a></li>
+<li><a class="waves-effect" href="#liga2019">Liga Italia</a></li>
+<li><a class="waves-effect" href="#saved">Favorit Team <span class="big-heart">❤</span></a> </li>
