--- a/index.html
+++ b/index.html
@@ -18,24 +18,10 @@
   <meta property="og:title" content="Situs Berita Bola." />
   <meta property="og:description" content="Situs Berita Bol Dengan Berbagai Fitur" />
   <meta name="author" content="r3ndyCoder433"> 
-  <meta property="language" content="Indonesia">  
-  <style>
-    header {
-      background: url('./img/icon.png');
-      background-size: cover;
-      background-position: center;
-      min-height: 1000px;
-    }
-
-    .parallax-img {
-      background-size: cover;
-      background-position: center;
-      min-height: 1000px;
-      height: 100%;
-    }
-  </style>
+  <meta property="language" content="Indonesia">    
 </head>
   <body>
+
     <header>
       <!-- Navigasi -->
       <nav class="light-blue lighten-1" role="navigation">
@@ -58,29 +44,6 @@
       </div>
     </div>
 
-    <section class="container section scrollspy" id="contact">
-      <div class="row">
-        <div class="col s12 l6">
-          <img src="img/profile-dicoding.jpg" alt="Rendy Dendimara" class="responsive-img materialboxed">
-        </div>
-        <div class="col s12 l6">
-            <div class="row">
-              <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content center white-text">
-                    <span class="card-title">Umbu Theofilus Dendimara</span>
-                    <p> I Love Programming</p>
-                  </div>
-                  <div class="card-action">
-                    <p></p>
-                    <p></p>
-                  </div>
-                </div>
-              </div>
-            </div>                 
-        </div>
-      </div>
-    </section>
 
     <!-- footer -->
     <footer class="page-footer light-blue darken-3">
@@ -88,7 +51,7 @@
         <div class="row">
           <div class="col s12 l6">
             <h5>Bolaku</h5>
-            <p>Situs Menampilkan Informasi Terkini Dalam Dunia Sepak Bola. Liga Champions, Premier Liga, La Liga, Seria-A Liga.</p>
+            <p>Situs Menampilkan Informasi Terkini Dalam Dunia Sepak Bola, Premier Liga, La Liga, Seria-A Liga.</p>
             <p>Dapatkan Informasi Menarik Lainnya Seperti Detail Team, Jadwal Pertandingan Team Dan Pilihlah Team Favoritmu.</p>
           </div>
           <div class="col s12 l4 offset-l2">
@@ -109,90 +72,12 @@
     </footer>    
 
     <script src="js/materialize.min.js"></script>
-    <script src="js/nav.js"></script>
     <script src="js/script.js"></script>
-    <script>
-      const materialbox = document.querySelectorAll('.materialboxed');
-      M.Materialbox.init(materialbox);
-      // handle parallax
-      const parallax = document.querySelectorAll('.parallax');
-      M.Parallax.init(parallax);
-
-      // REGISTER SERVICE WORKER
-      if ("serviceWorker" in navigator) {
-        registerServiceWorker();
-      } else {
-        console.log("ServiceWorker belum didukung browser ini.");
-      }
-
-      // Periksa fitur Notification API
-      if('Notification' in window) {
-        requestPermission();
-      } else {
-        console.error('browser tidak mendukung notifikasi');
-      }
-
-      // Register service worker
-      function registerServiceWorker() {
-        window.addEventListener("load", function() {
-          navigator.serviceWorker
-            .register("/service-worker.js")
-            .then(function() {
-              console.log("Pendaftaran ServiceWorker berhasil");
-            })
-            .catch(function() {
-              console.log("Pendaftaran ServiceWorker gagal");
-            });
-        });
-      }
-
-      function requestPermission() {
-        Notification.requestPermission().then(function (result) {
-          if (result === "denied") {
-            console.log("Fitur notifikasi tidak diijinkan.");
-            return;
-          } else if (result === "default") {
-            console.error("Pengguna menutup kotak dialog permintaan ijin.");
-            return;
-          }
-      
-          if ('PushManager' in window) {
-            navigator.serviceWorker.getRegistration().then(function(registration) {
-              registration.pushManager.subscribe({
-                userVisibleOnly: true,
-                applicationServerKey: urlBase64ToUint8Array("BLBAB_Xl4_YJOFgDrqV63LFPiBRs30Ek-DShh2DSGh5DBvIK6M1WL4b8hlRvh32am5KCZEcca2hpOkqi5l4YLa8")
-              }).then(function(subscribe) {
-                console.log('Berhasil melakukan subscribe dengan endpoint: ', subscribe.endpoint);
-                console.log('Berhasil melakukan subscribe dengan p256dh key: ', btoa(String.fromCharCode.apply(null, new Uint8Array(subscribe.getKey('p256dh')))));
-                console.log('Berhasil melakukan subscribe dengan auth key: ', btoa(String.fromCharCode.apply(null, new Uint8Array(subscribe.getKey('auth')))));
-              }).catch(function(e) {
-                console.error('Tidak dapat melakukan subscribe ', e.message);
-              });
-            });
-          }
-        });
-      
-      }
-
-      function urlBase64ToUint8Array(base64String) {
-        const padding = '='.repeat((4 - base64String.length % 4) % 4);
-        const base64 = (base64String + padding)
-          .replace(/-/g, '+')
-          .replace(/_/g, '/');
-        const rawData = window.atob(base64);
-        const outputArray = new Uint8Array(rawData.length);
-        for (let i = 0; i < rawData.length; ++i) {
-          outputArray[i] = rawData.charCodeAt(i);
-        }
-        return outputArray;
-      }
-
-      // REQUEST API UNTUK PERTAMA KALI
-      document.addEventListener("DOMContentLoaded", function() {
-        var page = window.location.hash.substr(1);
-      });
-    </script>
-    <script src="push.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/idb.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
 
