--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,22 @@
+<style>
+  header {
+    background: url('./img/icon.png');
+    background-size: cover;
+    background-position: center;
+    min-height: 1000px;
+  }
+
+  .parallax-img {
+    background-size: cover;
+    background-position: center;
+    min-height: 1000px;
+    height: 100%;
+  }
+</style>
+
 <!-- photo / grid dengan effect scrollspy-->
 <section class="section scrollspy" id="photos">
-  <div class="row">
+<!--   <div class="row">
 	<div class="col s12 l4">
 	  <img src="img/liga-champions.jpg" alt="" class="responsive-img materialboxed">
 	</div>
@@ -8,13 +24,13 @@
 	  <a href="/klasemen.html?liga=champions"><h2 class="indigo-text text-darken-4">Liga Champions</h2></a>
 	  <p>Informasi Terkini Klasemen Liga Champions.</p>
 	</div>
-  </div>
+  </div> -->
   <div class="row">
 	<div class="col s12 l4 push-l7 offset-l1">
   	  <img src="img/liga-inggris.jpg" alt="" class="responsive-img materialboxed">
 	</div>
 	<div class="col s12 l6 pull-l5 right-align offset-l1">
-	  <a href="/klasemen.html?liga=2021"><h2 class="indigo-text text-darken-4">Premier Liga</h2></a>
+	  <a href="#liga2021"><h2 class="indigo-text text-darken-4">Premier Liga</h2></a>
 	  <p>Informasi Terkini Klasemen Premier Liga.</p>
 	</div>
   </div>
@@ -23,7 +39,7 @@
 	  <img src="img/laliga.png" alt="" class="responsive-img materialboxed">
 	</div>
 	<div class="col s12 l6 offset-l1">
-	  <a href="/klasemen.html?liga=2014"><h2 class="indigo-text text-darken-4">La Liga</h2></a>
+	  <a href="#liga2014"><h2 class="indigo-text text-darken-4">La Liga</h2></a>
 	  <p>Informasi Terkini Klasemen La Liga.</p>
 	</div>
   </div>
@@ -32,8 +48,33 @@
 	  <img src="img/serie-A.jpg" alt="" class="responsive-img materialboxed">
 	</div>
 	<div class="col s12 l6 pull-l5 right-align offset-l1">
-	  <a href="/klasemen.html?liga=2019"><h2 class="indigo-text text-darken-4">Seria A Liga</h2></a>
+	  <a href="#liga2019"><h2 class="indigo-text text-darken-4">Seria A Liga</h2></a>
 	  <p>Informasi Terkini Klasemen Seria-A Liga</p>
 	</div>
   </div>
 </section>
+
+<section class="container section scrollspy" id="contact">
+  <div class="row">
+    <div class="col s12 l6">
+      <img src="img/profile-dicoding.jpg" alt="Rendy Dendimara" class="responsive-img materialboxed">
+    </div>
+    <div class="col s12 l6">
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card blue-grey darken-1">
+              <div class="card-content center white-text">
+                <span class="card-title">Umbu Theofilus Dendimara</span>
+                <p> I Love Programming</p>
+              </div>
+              <div class="card-action">
+                <p></p>
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>                 
+    </div>
+  </div>
+</section>
+
