--- a/index.html
+++ b/index.html
@@ -72,12 +72,35 @@
     </footer>    
 
     <script src="js/materialize.min.js"></script>
+    <script>
+      // REGISTER SERVICE WORKER
+      if ("serviceWorker" in navigator) {
+        registerServiceWorker();
+      } else {
+        console.log("ServiceWorker belum didukung browser ini.");
+      }
+
+      // Register service worker
+      function registerServiceWorker() {
+      window.addEventListener("load", function() {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .then(function() {
+            console.log("Pendaftaran ServiceWorker berhasil");
+          })
+          .catch(function() {
+            console.log("Pendaftaran ServiceWorker gagal");
+          });
+      });
+      }
+    </script> 
     <script src="js/script.js"></script>
     <script src="js/api.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/idb.js"></script>
     <script src="js/db.js"></script>
     <script src="js/nav.js"></script>
+
   </body>
 </html>
 
